Added all projects and resume

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite_react_shadcn_ts",
-  "homepage": "https://Debaprasad-dez.github.io/web/",
+  "homepage": "https://Debaprasad-dez.github.io/myweb/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
